<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.jobson</groupId>
    <artifactId>jobson-project</artifactId>
    <version>1.0.7</version>
    <packaging>pom</packaging>

    <name>jobson project</name>
    <description>
        The Jobson webserver daemon project.
    </description>
    <url>https://github.com/adamkewley/jobson</url>
    <inceptionYear>2017</inceptionYear>

    <licenses>
        <license>
            <name>Apache License, version 2.0</name>
            <url>https://www.apache.org/</url>
            <distribution>repo</distribution>
            <comments>Permissive</comments>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/adamkewley/jobson</url>
        <connection>scm:git:git://github.com/adamkewley/jobson.git</connection>
        <developerConnection>scm:git:git://github.com/adamkewley/jobson.git</developerConnection>
    </scm>

    <issueManagement>
        <url>https://github.com/adamkewley/jobson/issues</url>
    </issueManagement>

    <developers>
        <developer>
            <id>adamkewley</id>
            <name>Adam Kewley</name>
            <email>contact@adamkewley.com</email>
            <url>http://adamkewley.com</url>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <properties>
        <version.jobsonswagger>1.0.7</version.jobsonswagger>
        <version.jobsonswaggerui>1.0.7</version.jobsonswaggerui>

        <dropwizard.version>1.3.16</dropwizard.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <docker.user>adamkewley</docker.user>
        <docker.repo>jobson</docker.repo>
        <version.swaggerui>3.24.0</version.swaggerui>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.dropwizard</groupId>
                <artifactId>dropwizard-bom</artifactId>
                <version>${dropwizard.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                        <compilerArgument>-Xlint:deprecation</compilerArgument>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M3</version>
                    <configuration>
                        <useSystemClassLoader>false</useSystemClassLoader>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.antlr</groupId>
                    <artifactId>antlr4-maven-plugin</artifactId>
                    <version>4.7.2</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.1.2</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>1.8</version>
                </plugin>

                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <modules>
        <!-- Core code -->
        <module>jobson</module>
        <module>jobson-swagger</module>
        <module>jobson-ui</module>

        <!-- Documentation -->
        <module>jobson-swagger-ui</module>
        <module>jobson-docs</module>

        <!-- Packaging -->
        <module>jobson-deb</module>
        <module>jobson-nix</module>
        <module>jobson-docker</module>
    </modules>
</project>
